--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,20 @@
 <head>
     <title>Aaron's Homepage</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
     <!-- build:css -->
     <!-- endbuild -->
 </head>
 <body ng-controller="MainController">
+    <nav-bar ng-show="menusVisible" current-item="currentMenuItem"></nav-bar>
 
-    <main>
-        <h1>Aaron C Willows</h1>
-        <h2>Front End / UX Developer</h2>
-    </main>
 
-    <h3>Tesasdfdt</h3>
+    <div ng-view></div>
+
+    <footer-nav ng-show="menusVisible" next-item="nextMenuItem"></footer-nav>
 
 
     <!-- build:js -->
