Added resume stuff. Reworked overall color style.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <nav-bar ng-show="menusVisible" current-item="currentMenuItem"></nav-bar>
 
 
-    <div ng-view></div>
+    <div class="main-view" ng-view></div>
 
     <footer-nav ng-show="menusVisible" next-item="nextMenuItem"></footer-nav>
 
