Made backgrounds dynamic per page

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- build:css -->
     <!-- endbuild -->
 </head>
-<body ng-controller="MainController">
+<body ng-controller="MainController" ng-class="backgroundClass">
     <nav-bar ng-show="menusVisible" current-item="currentMenuItem"></nav-bar>
 
 
