Now using html5 mode.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <title ng-bind="pageTitle">Aaron's Homepage</title>
 
+    <base href="/">
+
     <meta name="description" content="Portfolio and contact information for Aaron Willows, a web developer in the Seattle area.">
     <meta charset="utf-8">
 
